added privacy policy

--- a/sensedroid/privacy_policy.html
+++ b/sensedroid/privacy_policy.html
@@ -8,7 +8,32 @@
         <style> body { font-family: 'Roboto', sans-serif; padding:1em; } </style>
         </head>
         <body>
-            <h2>Privacy Policy</h2> 
+            <h2>Политика конфиденциальности</h2> 
+            <p>Sense распространяется как бесплатное приложение и предназначено для использования "как есть"</p>
+            <p>Эта страница используется для информирования посетителей о политике в отношении сбора, передачи, использования Личной информации работе с приложением Sense.</p>
+            <p>Если вы решите использовать Sense, вы соглашаетесь на сбор и использование информации в соответствии с данной политикой. </p>
+
+            <h3>Сбор и использование информации</h3>
+            <p>
+                Для получения списка ближайших к пользователю датчиков приложение собирает информацию о местоположении мобильного устройства.
+                Данная информация передается на обработку стороннему сервису <a href="https://narodmon.ru/#privacy">"Народный мониторинг"</a>
+            </p>
+
+            <p>
+                В целях аналитики на сервис <a href="https://narodmon.ru/#privacy">"Народный мониторинг"</a> также
+                передается основные данные об устройстве: IP-адрес, идентификатор и модель устройства, версия установленного программного обеспечения, выбранный часовой пояс и язык системы
+            </p>
+
+            <p>Приложение использует сторонние сервисы, которые могут собирать информацию, используемую для вашей идентификации. Ссылки на политику конфиденциальности сторонних поставщиков услуг, используемых приложением: </p>
+            <ul>
+                <li><a href="https://policies.google.com/privacy">Google Play Services</a></li>
+                <li><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></li>
+                <li><a href="https://narodmon.ru/#privacy">Народный мониторинг</a></li>
+                <li><a href="https://consumer.huawei.com/ru/privacy/privacy-policy/">Huawei Media Services</a></li>
+            </ul>
+
+            <h3>Обновление данной Политики конфиденциальности</h3>
+            <p>Данная Политика конфиденциальности может быть обновлена. Эти изменения вступают в силу сразу после публикации на этой странице. Таким образом, рекомендуется периодически просматривать эту страницу на предмет изменений. </p>
         </body>
     </html>
       
