--- a/sensedroid/privacy_policy.html
+++ b/sensedroid/privacy_policy.html
@@ -5,9 +5,13 @@
         <meta name='viewport' content='width=device-width'>
             <link rel="shortcut icon" href="icon.png" type="image/png">
             <title>Privacy Policy</title>
-        <style> body { font-family: 'Roboto', sans-serif; padding:1em; } </style>
+        <style> 
+            body { font-family: 'Roboto', sans-serif; padding:1em; }
+            div { display: inline-block; padding: 15px; }
+        </style>
         </head>
         <body>
+            <div>Выбор языка/Language selection: </div><div><a href="#">RUS</a></div><div><a href="privacy_policy_en.html">EN</a></div>
             <h2>Политика конфиденциальности</h2> 
             <p>Sense распространяется как бесплатное приложение и предназначено для использования "как есть"</p>
             <p>Эта страница используется для информирования посетителей о политике в отношении сбора, передачи, использования Личной информации работе с приложением Sense.</p>
